-
Bug
-
Resolution: Done
-
P4: Low
-
5.5.0
-
None
-
d6fbb9070f518443f7ebeb0eae53847814e2496b
"""void QAbstractItemModel::modelReset() [signal]
This signal is emitted when reset() or endResetModel() is called, after the model's internal state (e.g. persistent model indexes) has been invalidated.
Note that if a model is reset it should be considered that all information previously retrieved from it is invalid. This includes but is not limited to the rowCount() and columnCount(), flags(), data retrieved through data(), and roleNames().
This function was introduced in Qt 4.1.
Note: This is a private signal. It can be used in signal connections but cannot be emitted by the user.
See also endResetModel() and modelAboutToBeReset().
void QAbstractItemModel::modelAboutToBeReset() [signal]
This signal is emitted when reset() is called, before the model's internal state (e.g. persistent model indexes) has been invalidated.
This function was introduced in Qt 4.2.
Note: This is a private signal. It can be used in signal connections but cannot be emitted by the user.
See also beginResetModel() and modelReset()."""
------------------------
reset() has be removed in Qt5.5.0