Doc: Remove references to obsolete reset() function

...from the docs of the signals it emits.

Task-number: QTBUG-53228
Change-Id: Ifdd91404cae9dd6480ae29b31f2a48fa024df442
Reviewed-by: Nico Vertriest <nico.vertriest@theqtcompany.com>

cregit: d6fbb9070f518443f7ebeb0eae53847814e2496b https://github.com/qt/qtbase/commit/d6fbb9070f518443f7ebeb0eae53847814e2496b